800-kubernetes/awsome-templates/discourse/kube2/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose/docker-compose.yml
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose/docker-compose.yml
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
      - name: redis
        image: localhost:5000/bitnami/redis:6.0-debian-10
        imagePullPolicy: ""
        resources: {}
        volumeMounts:
        - mountPath: /bitnami
          name: dockercompose-redis-data
        ports:
        - containerPort: 3000

      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: dockercompose-redis-data
        persistentVolumeClaim:
          claimName: dockercompose-redis-data
status: {}
